# finite-automata

./: Cargo.toml
src/: lib.rs
src/automata/: dfa.rs  mod.rs  nfa.rs
src/deterministic/: fsm.rs  mod.rs  state.rs  transition.rs
src/dfa/: delta.rs  machine.rs  mod.rs  transition.rs
src/model/: alphabet.rs  delta.rs  final_states.rs  mod.rs  sigma.rs  state.rs
src/nfa/: delta.rs  machine.rs  mod.rs
src/tests/: mod.rs
src/tests/automata/: dfa.rs  dfa_configuration.rs  mod.rs
src/tests/automata/nfa/: mod.rs  nfa.rs  nfa_configuration.rs  nfa_with_deterministic_detlas.rs
src/tests/deterministic/: alphabet.rs  fsm.rs  mod.rs  state.rs  transition.rs
src/tests/dfa/: delta.rs  machine.rs  mod.rs  transition.rs
src/tests/model/: alphabet.rs  delta.rs  final_states.rs  mod.rs  sigma.rs  state.rs
src/tests/nfa/: delta.rs
src/tests/nfa/machine/: mod.rs  nfa.rs  nfa_with_deterministic_detlas.rs
src/utils/: duped.rs  mod.rs
